made nodelist a concurrent hash list